scenarioo/scenarioo#500: increased max width of a tooltip to prevent scrollbar

--- a/scenarioo-client/app/styles/scenarioo.less
+++ b/scenarioo-client/app/styles/scenarioo.less
@@ -769,6 +769,7 @@ textarea#issueDescription {
 .tooltip.diff-icon-tooltip .tooltip-inner {
   white-space: nowrap;
   text-align:left;
+  max-width: 300px;
 
   .square {
     display: inline-block;
